# build-the-brain

./: .gitignore  pyproject.toml
grounding/: 0_naive_autoencoder.py  0_naive_autoencoder.yaml  1_naive_covnet_autoencoder.py  2_naive_covnet_autoencoder_low_samples.yaml  README.md  analyze_autoencoder.py  analyze_manifold.py  autoencoder_common.py  export_decoder_onnx.py  export_encoder_onnx.py  export_interactive_assets.py  generate_latent_points.py  interactive_latent_playground.html  latent_space_viewer.html  train_covnet.py  train_naive_autoencoder.py  train_naive_covnet_autoencoder.py
grounding/configs/: 0_naive_autoencoder.yaml  1_naive_covnet_autoencoder.yaml  2_naive_covnet_autoencoder_low_samples.yaml  3_regularized_covnet.yaml  4_self_supervised_covnet_aug100.yaml  4_self_supervised_covnet_aug30.yaml  5_asymmetric_resnet8_autoencoder.yaml
